# rust-lean-aeneas

./: .gitignore  AENEAS.md  CONTRIBUTING.md  DO_NEXT.md  GAP_ANALYSIS.md  LEAN.md  LICENSE  Makefile  PLAN.md  README.md  STATUS.md  WHAT_WE_DID.md  clippy.toml
.github/workflows/: ci.yml
tutorials/: PLAN.md  README.md
tutorials/01-setup-hello-proof/: PLAN.md  README.md
tutorials/01-setup-hello-proof/lean/: HelloProof.lean  lakefile.lean
tutorials/01-setup-hello-proof/rust/: Cargo.toml
tutorials/01-setup-hello-proof/scripts/: translate.sh
tutorials/02-rpn-calculator/: PLAN.md  README.md
tutorials/02-rpn-calculator/lean/: RpnCalc.lean  lakefile.lean
tutorials/03-infix-calculator/: PLAN.md  README.md
tutorials/04-state-machines/: PLAN.md  README.md
tutorials/05-message-protocol/: PLAN.md  README.md
tutorials/06-buffer-management/: PLAN.md  README.md
tutorials/07-tui-core/: Makefile  PLAN.md  README.md
tutorials/08-llm-client-core/: PLAN.md  README.md
tutorials/09-agent-reasoning/: PLAN.md  README.md
tutorials/10-multi-agent-orchestrator/: PLAN.md  README.md
tutorials/11-full-integration/: PLAN.md  README.md
tutorials/11-full-integration/rust/: Cargo.toml
tutorials/11-full-integration/rust/src/: lib.rs
tutorials/11-full-integration/rust/src/shell/: adapters.rs  event_loop.rs  http_client.rs  main.rs  mod.rs  terminal_io.rs
tutorials/11-full-integration/rust/src/verified_core/: app_state.rs  app_update.rs  app_view.rs  integration_types.rs  message_bridge.rs  mod.rs
tutorials/shared/: Aeneas.lean
(+174 files in other folders)
